feat: db, dockerfiles, modified swagger.json
